# gtmintel

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  auth-middleware.mdc  docker-compose.yml  domain_name_ideas.txt  project_learnings.md  readme.md
.cargo/: config.toml
.cursor/: design-system.mdc
.cursor/rules/: building-tests.mdc  comment-style.mdc  dependency-management.mdc  design-system.mdc  directory-structure.mdc  prd.mdc  project-structure.mdc  update-dir-structure.sh
.github/workflows/: llvm-cov.yaml  rust-tests.yaml
migration/: Cargo.toml  mod.rs
migration/src/: lib.rs  m20250419_153514_create_industry_hiring_ads_table.rs  m20250419_154927_create_funding_table.rs  main.rs
scss/: main.scss
server/: Cargo.toml
server/src/: main.rs
server/src/db/: mod.rs  models.rs
src/: error.rs  lib.rs  main.rs  routes.rs
src/data/: feeds_ai.json
src/entities/: funding.rs  hiring_ads.rs  mod.rs
src/jobs/: industry_funding.rs  industry_hiring_ads.rs  mod.rs
src/routes/: accessibility.rs  content_suggestions.rs  industry_news.rs  mod.rs
static/css/: global.css
style/: main.scss
templates/: base.html  index.html  widget.html
tests/: api_tests.rs  error_tests.rs  integration_tests.rs  lib_core_tests.rs  lib_tests.rs  main_tests.rs
