[package]
name = "marketintel-api"
version = "0.1.0"
edition = "2021"
description = "API for company research and website analysis"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.5", features = ["util"] }
hyper = "1.0"
sitemap = "0.4.1"
texting_robots = "0.2.2"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
url = "2.5.4"
tower_governor = "0.7.0"

[dev-dependencies]
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
