[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

# Add the main sea-orm dependency
sea-orm = { version = "^0.12.0", features = [
    "runtime-tokio-native-tls", # Enable the Tokio runtime with native TLS
    "sqlx-postgres"            # Enable the PostgreSQL driver via SQLx
] }

[dependencies.sea-orm-migration]
version = "^0.12.0" # Use the version compatible with your sea-orm version 